# TurboQuant

./: README.md  pyproject.toml
animations/: render.sh  scenes.py
tests/: conftest.py  test_functional.py  test_integration_perplexity.py  test_integration_qwen.py  test_polar_quant.py  test_qjl.py  test_rotation.py  test_search_recall.py
turboquant/: __init__.py
turboquant/core/: polar_quant.py  qjl.py  rotation.py
turboquant/mlx/: __init__.py  functional.py
